# JHPCN-DF

./: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  README  README.md  config.h.in  configure  configure.ac  index.html  jhpcndf-config.in  jhpcndf-uname  params.json
cmake/: CompileOptionSelector.cmake  FindJHPCNDF.cmake  FindLZ4.cmake  Toolchain_K.cmake
doc/: Doxyfile  Makefile.am  Makefile.in
examples/: CMakeLists.txt
examples/C/: Makefile.am  Makefile.in  encode_and_decode.c  read_and_write.c
examples/C++/: Makefile.am  Makefile.in  encode_and_decode.cpp  read_and_write.cpp
examples/Fortran/: Makefile.am  Makefile.in  encode_and_decode.F90  encode_and_decode.f90  read_and_write.F90  read_and_write.f90
include/: jhpcndf.h  jhpcndfVersion.h  jhpcndfVersion.h.in
src/: BaseIO.h  Decoder.h  Encoder.h  FInterface.f90  FileInfoManager.h  IO.h  InterFace.cpp  Interface.cpp  Makefile.am  Makefile.in  Utility.h  jhpcndf.f90  lz4IO.h  zlibIO.h
tests/BenchmarkTest/: ANDBenchmark.cpp  XORBenchmark.cpp  ZeroPadding2Benchmark.cpp  ZeroPaddingBenchmark.cpp  a.out_GNU_double_XOR  a.out_GNU_double_ZeroPadding  a.out_GNU_float_XOR  a.out_GNU_float_ZeroPadding  benchmark_common.h  comp.sh  run.sh
tests/PerformanceTest/: .PerformanceTest.cpp.swp  CMakeLists.txt  DumpTool.cpp  Makefile  Makefile.am  Makefile.in  PerformanceTest.cpp  ValidationTool.cpp  real_type.h
tests/UnitTest/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
tests/UnitTest/src/: TestAND.cpp  TestFileInfoManager.cpp  TestIO.cpp  TestOR.cpp  TestXOR.cpp  TestZeroPadding.cpp  TestZlibIO.cpp
tests/VisualizationTool/: CMakeLists.txt  VisualizationTool.cpp
