##############################################################################
#
#  JHPCN-DF : Data compression library based on
#             Jointed Hierarchical Precision Compression Number Data Format
# 
#  Copyright (c) 2014-2015 Advanced Institute for Computational Science, RIKEN.
#  All rights reserved.
# 
##############################################################################

doc_includedir = $(prefix)/doc
doc_include_HEADERS = \
    $(top_srcdir)/doc/JHPCNDF_ug.pdf

